# rive-flutter

./: .gitattributes  .gitignore  .lfsconfig  .lua-format  .metadata  .rive_head  CHANGELOG.md  LICENSE  README.md  VERSION  analysis_options.yaml  platform_considerations.md  premake5_rive_plugin.lua  pubspec.yaml  update_dependencies.sh
.github/ISSUE_TEMPLATE/: config.yml  i-have-a-problem-with-rive-flutter.md  runtime-issue-template.yml
.github/scripts/release/: .gitignore  .release-it.json  changelog.hbs  package-lock.json  package.json  release.sh
.github/workflows/: add_to_project.yml  publish.yaml  tests.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/app/rive/rive/: RivePlugin.kt
assets/: animations_0_6_2.riv  multiple_artboards_0_6_2.riv  one_shot_0_6_5.riv
example/: .metadata  README.md  analysis_options.yaml  pubspec.yaml
example/android/: build.gradle  gradle.properties
example/android/app/: build.gradle  build.gradle.kts
example/assets/: acqua_text_out_of_band.riv  asset.riv  ball_elements.riv  blinko.riv  blue_artboard.riv  button.riv  cannon.riv  centaur_game.riv  centaur_v2.riv  colors_juice.riv  coyote.riv  cubic_work.riv  databinding_images.riv  draworderanimation_3.riv  electrified_button_nested_text.riv  embedded_text.riv  event_sounds.riv  hit_test_consume.riv  image_out_of_band.riv  jet_fighter.riv  layout_test.riv  light_switch.riv  lip-sync.riv  liquid_download.riv  lists_demo.riv  little_machine.riv  multitouch.riv  off_road_car.riv  ping_pong.riv  ping_pong_audio_demo.riv  rating.riv  rewards.riv  rive_rendering_test.riv  rocket.riv  runtime_nested_inputs.riv  sampleimage.riv  sampletext.riv  skins_demo.riv  solo_test.riv  tape_deck.riv  (+8 more)
example/integration_test/: controller_swap_test.dart
example/ios/Runner/: AppDelegate.m  Info.plist  main.m
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: artboard_nested_inputs.dart  basic_text.dart  basic_text_customized.dart  carousel.dart  colors.dart  custom_asset_loading.dart  custom_cached_asset_loading.dart  custom_controller.dart  event_open_url_button.dart  event_sounds.dart  event_star_rating.dart  example_animation.dart  example_state_machine.dart  hit_events.dart  liquid_download.dart  little_machine.dart  main.dart  play_one_shot_animation.dart  play_pause_animation.dart  renderfont_demo.dart  rive_audio.dart  rive_audio_out_of_band.dart  simple_animation.dart  simple_animation_network.dart  simple_machine_action.dart  simple_machine_listener.dart  simple_state_machine.dart  skinning_demo.dart  state_machine_skills.dart  teddy_login_screen.dart
example/lib/advanced/: advanced.dart
example/lib/examples/: animation_painter.dart  databinding.dart  databinding_artboards.dart  databinding_images.dart  databinding_lists.dart  demo_scripting.dart  events.dart  examples.dart  hit_test_behaviour.dart  inputs.dart  multi_touch.dart  network_asset.dart  out_of_band_assets.dart  out_of_band_assets_audio.dart  out_of_band_assets_cached.dart  pause_play.dart  (+13 more)
example/test/: widget_test.dart
example/web/: index.html  manifest.json
ios/: rive.podspec
ios/Classes/: RivePlugin.h  RivePlugin.m  SwiftRivePlugin.swift
ios/rive_text/: rive_text.cpp
lib/: components.dart  math.dart  rive.dart  rive_web.dart
lib/src/: animation_list.dart  asset.dart  asset_list.dart  asset_loader.dart  blend_animations.dart  container_children.dart  data_enum_values.dart  debug.dart  drawable_list.dart  errors.dart  event_list.dart  extensions.dart  file_loader.dart  input_changes.dart  layer_component_events.dart  listener_actions.dart  local_file_io.dart  local_file_web.dart  platform.dart  platform_native.dart  platform_web.dart  renderfont.dart  renderfont_ffi.dart  renderfont_wasm.dart  rive.dart  rive_extensions.dart  rive_file.dart  rive_render_box.dart  rive_scene.dart  rive_text.dart  rive_text_ffi.dart  rive_text_wasm.dart  rive_text_wasm_version.dart  runtime_artboard.dart  runtime_event.dart  runtime_mounted_artboard.dart  runtime_nested_artboard.dart  state_machine_components.dart  state_machine_controller.dart  state_transition_conditions.dart  (+3 more)
macos/: rive.podspec
macos/Classes/: RivePlugin.swift
macos/renderfont/: renderfont.cpp
macos/rive_text/: rive_text.cpp
scripts/: update_rive_native_to_path.sh
shared_lib/: build_shared.sh
skill_level/: .metadata  README.md  pubspec.yaml
skill_level/assets/: skills.riv
skill_level/lib/: main.dart
skill_level/test/: widget_test.dart
skill_level/web/: index.html  manifest.json
test/: artboard_test.dart  asset_gc_test.dart  asset_test.dart  binary_buffer_test.dart  component_find_test.dart  hit_test.dart  hittest_test.dart  linear_animation_instance_test.dart  nested_input_test.dart  rive_animation_test.dart  rive_file_test.dart  rive_native_render_box_test.dart  rive_network_test.dart  rive_test.dart  rive_test_data.dart  rive_widget_controller_test.dart  shared_render_texture_test.dart  shared_texture_view_test.dart  simple_animation_test.dart  text_test.dart  widget_builder_test.dart
test/assets/: cdn_image.riv  component_discovery.riv  electrified_button_simple.riv  event_on_listener.riv  events_from_trigger_test.riv  events_on_states.riv  follow_path_path.riv  follow_path_shapes.riv  follow_path_solos.riv  hit_test_consume.riv  hit_test_pass_through.riv  image_asset_prod.riv  image_asset_uat.riv  joystick_handle_source.riv  off_road_car.riv  rive-flutter-test-asset.riv  rive_file_controller_test.riv  runtime_nested_inputs.riv  sample_image.riv  skins_demo.riv  spilled_time.riv
test/goldens/: golden_comparator.dart
test/mocks/: fakes.dart  mocks.dart
test/src/: network.dart  utils.dart
test/widgets/: rive_animation_test.dart
wasm/: README.md  build_wasm.sh  package-lock.json  package.json  premake5_wasm.lua  publish_wasm.sh  renderfont_bindings.cpp  rive_text_bindings.cpp
wasm/js/: externs.js  render_font.js  rive_text.js
wasm/test/: load.test.js
windows/: CMakeLists.txt  rive_plugin.cpp
windows/include/rive/: rive_plugin.h
(+386 files in other folders)
